# FragEngineAPI

./: .env  .gitignore  API_REFERENCE.md  Cargo.toml  DEPLOYMENT_GUIDE.md  Dockerfile  RAPIDAPI_DESCRIPTION.md  openapi.json  schema.sql
src/: db.rs  main.rs  models.rs
