[package]
name = "fragengine"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
dotenvy = "0.15"
thiserror = "1.0"
tower-http = { version = "0.5", features = ["cors"] }

[profile.release]
lto = false
codegen-units = 16
opt-level = 2
panic = 'abort'
debug = false
strip = true
